@@ -12,7 +12,6 @@ deluge/ui/gtkui/glade/edit_trackers.glade
 deluge/ui/gtkui/glade/queuedtorrents.glade
 deluge/ui/gtkui/glade/move_storage_dialog.glade
 deluge/ui/gtkui/glade/connection_manager.glade
-deluge/ui/gtkui/glade/wizard.glade
 deluge/ui/gtkui/glade/create_torrent_dialog.glade
 deluge/ui/gtkui/glade/dgtkpopups.glade
 deluge/ui/gtkui/glade/tray_menu.glade
@@ -22,7 +21,6 @@ deluge/docs/source/conf.py
 deluge/core/autoadd.py
 deluge/core/preferencesmanager.py
 deluge/core/filtermanager.py
-deluge/core/signalmanager.py
 deluge/core/torrentmanager.py
 deluge/core/daemon.py
 deluge/core/torrent.py
@@ -33,30 +31,27 @@ deluge/core/core.py
 deluge/core/alertmanager.py
 deluge/core/rpcserver.py
 deluge/config.py
+deluge/countries.py
 deluge/metafile.py
 deluge/pluginmanagerbase.py
-deluge/SimpleXMLRPCServer.py
 deluge/plugins/label/label/webui.py
 deluge/plugins/label/label/test.py
 deluge/plugins/label/label/gtkui/label_config.py
 deluge/plugins/label/label/gtkui/sidebar_menu.py
 deluge/plugins/label/label/gtkui/submenu.py
-deluge/plugins/label/label/gtkui/ui.py
 deluge/plugins/label/label/gtkui/__init__.py
 deluge/plugins/label/label/__init__.py
 deluge/plugins/label/label/core.py
 deluge/plugins/label/setup.py
-deluge/plugins/corepluginbase.py
+deluge/plugins/pluginbase.py
 deluge/plugins/init.py
 deluge/plugins/blocklist/setup.py
 deluge/plugins/blocklist/blocklist/webui.py
 deluge/plugins/blocklist/blocklist/gtkui.py
-deluge/plugins/blocklist/blocklist/ui.py
 deluge/plugins/blocklist/blocklist/text.py
 deluge/plugins/blocklist/blocklist/peerguardian.py
 deluge/plugins/blocklist/blocklist/__init__.py
 deluge/plugins/blocklist/blocklist/core.py
-deluge/plugins/coreclient.py
 deluge/plugins/__init__.py
 deluge/plugins/webuipluginbase.py
 deluge/plugins/stats/setup.py
@@ -71,7 +66,7 @@ deluge/configmanager.py
 deluge/ui/tracker_icons.py
 deluge/ui/client.py
 deluge/ui/ui.py
-deluge/ui/console/mapping.py
+deluge/ui/coreconfig.py
 deluge/ui/console/colors.py
 deluge/ui/console/commands/resume.py
 deluge/ui/console/commands/config.py
@@ -92,12 +87,10 @@ deluge/ui/gtkui/options_tab.py
 deluge/ui/gtkui/statusbar.py
 deluge/ui/gtkui/status_tab.py
 deluge/ui/gtkui/addtorrentdialog.py
-deluge/ui/gtkui/coreconfig.py
 deluge/ui/gtkui/sidebar.py
 deluge/ui/gtkui/gtkui.py
 deluge/ui/gtkui/aboutdialog.py
 deluge/ui/gtkui/systemtray.py
-deluge/ui/gtkui/dbusinterface.py
 deluge/ui/gtkui/files_tab.py
 deluge/ui/gtkui/menubar.py
 deluge/ui/gtkui/peers_tab.py
@@ -110,7 +103,6 @@ deluge/ui/gtkui/pluginmanager.py
 deluge/ui/gtkui/mainwindow.py
 deluge/ui/gtkui/removetorrentdialog.py
 deluge/ui/gtkui/common.py
-deluge/ui/gtkui/signals.py
 deluge/ui/gtkui/torrentdetails.py
 deluge/ui/gtkui/__init__.py
 deluge/ui/gtkui/edittrackersdialog.py
@@ -120,72 +112,16 @@ deluge/ui/gtkui/new_release_dialog.py
 deluge/ui/gtkui/connectionmanager.py
 deluge/ui/gtkui/createtorrentdialog.py
 deluge/ui/gtkui/details_tab.py
-deluge/ui/signalreceiver.py
 deluge/ui/common.py
 deluge/ui/__init__.py
-deluge/ui/webui/components.py
-deluge/ui/webui/render.py
-deluge/ui/webui/page_decorators.py
-deluge/ui/webui/webui.py
-deluge/ui/webui/debugerror.py
-deluge/ui/webui/webserver_common.py
-deluge/ui/webui/config_forms.py
-deluge/ui/webui/deluge_webserver.py
-deluge/ui/webui/json_api.py
-deluge/ui/webui/register_menu.py
-deluge/ui/webui/config_tabs_deluge.py
-deluge/ui/webui/lib/webpy022/request.py
-deluge/ui/webui/lib/webpy022/wsgiserver/__init__.py
-deluge/ui/webui/lib/webpy022/db.py
-deluge/ui/webui/lib/webpy022/template.py
-deluge/ui/webui/lib/webpy022/cheetah.py
-deluge/ui/webui/lib/webpy022/debugerror.py
-deluge/ui/webui/lib/webpy022/http.py
-deluge/ui/webui/lib/webpy022/httpserver.py
-deluge/ui/webui/lib/webpy022/utils.py
-deluge/ui/webui/lib/webpy022/__init__.py
-deluge/ui/webui/lib/webpy022/net.py
-deluge/ui/webui/lib/webpy022/wsgi.py
-deluge/ui/webui/lib/webpy022/webapi.py
-deluge/ui/webui/lib/webpy022/form.py
-deluge/ui/webui/lib/json.py
-deluge/ui/webui/lib/newforms_plus.py
-deluge/ui/webui/lib/egg_render.py
-deluge/ui/webui/lib/static_handler.py
-deluge/ui/webui/lib/__init__.py
-deluge/ui/webui/lib/web.py
-deluge/ui/webui/lib/newforms_portable/django/core/__init__.py
-deluge/ui/webui/lib/newforms_portable/django/core/exceptions.py
-deluge/ui/webui/lib/newforms_portable/django/utils/html.py
-deluge/ui/webui/lib/newforms_portable/django/utils/http.py
-deluge/ui/webui/lib/newforms_portable/django/utils/encoding.py
-deluge/ui/webui/lib/newforms_portable/django/utils/translation.py
-deluge/ui/webui/lib/newforms_portable/django/utils/safestring.py
-deluge/ui/webui/lib/newforms_portable/django/utils/__init__.py
-deluge/ui/webui/lib/newforms_portable/django/utils/datastructures.py
-deluge/ui/webui/lib/newforms_portable/django/utils/functional.py
-deluge/ui/webui/lib/newforms_portable/django/__init__.py
-deluge/ui/webui/lib/newforms_portable/forms.py
-deluge/ui/webui/lib/newforms_portable/models.py
-deluge/ui/webui/lib/newforms_portable/widgets.py
-deluge/ui/webui/lib/newforms_portable/fields.py
-deluge/ui/webui/lib/newforms_portable/__init__.py
-deluge/ui/webui/lib/newforms_portable/util.py
-deluge/ui/webui/lib/egg_handler.py
-deluge/ui/webui/utils.py
-deluge/ui/webui/pages.py
-deluge/ui/webui/__init__.py
-deluge/ui/webui/tests/test_all.py
-deluge/ui/webui/apache.py
-deluge/ui/webui/web.py
-deluge/ui/webui/torrent_move.py
-deluge/ui/webui/config_tabs_webui.py
-deluge/ui/webui/torrent_options.py
-deluge/ui/webui/torrent_add.py
-deluge/ui/webui/scripts/template_strings.py
-deluge/ui/webui/scripts/extract_ajax_strings.py
-deluge/ui/webui/scripts/copy_icons.py
-deluge/ui/webui/scripts/extract_template_strings.py
+deluge/ui/web/auth.py
+deluge/ui/web/common.py
+deluge/ui/web/gen_gettext.py
+deluge/ui/web/__init__.py
+deluge/ui/web/json_api.py
+deluge/ui/web/pluginmanager.py
+deluge/ui/web/server.py
+deluge/ui/web/web.py
 deluge/common.py
 deluge/component.py
 deluge/main.py
@@ -198,7 +134,6 @@ deluge/tests/test_tracker_icons.py
 deluge/tests/test_stats.py
 deluge/tests/test_client.py
 deluge/log.py
-deluge/xmlrpclib.py
 deluge/scripts/deluge_remote.py
 deluge/scripts/wiki_docgen.py
 deluge/scripts/create_plugin.py
